poc/tests/errors/test_FplMalformedGlobalId_class_namespace.fpl
TestMalformedGlobalId
{
    theory
    {
        class TestMalformedGlobalId: obj
        {
        }
    }
}

##############################

FplMalformedGlobalId:5:27: The global id TestNamespace.TestNamespace should consist of different names.